fix full height issue on mobile

--- a/src/components/css/ColorSchemer.css
+++ b/src/components/css/ColorSchemer.css
@@ -1,5 +1,5 @@
 #ColorSchemer{
-  height: 100vh;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
 }
